--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -23,3 +23,9 @@
         display: none !important;
     }
 }
+
+.mobile-visible{
+    @include mobile-above{
+        display: none !important;
+    }
+}
