--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,4 +17,6 @@
     './blocks/unusual-underline',
     './blocks/section',
     './blocks/hero',
-    './blocks/content';
+    './blocks/content',
+    './blocks/plans',
+    './blocks/pagination';
