1. Сделал pagination для PLANS 2. Сверстал, стилизовал и адаптировал: - YOUR WORK - YOUR DATA - SPONSORS - APPS - TESTIMONIALS 3. Остался footer

--- a/styles/blocks/_content.scss
+++ b/styles/blocks/_content.scss
@@ -41,6 +41,12 @@
                 max-width: 633px;
             }
 
+            &--reversed{
+                @include tablet{
+                    order: 1;
+                }
+            }
+
             h2{
                 @include tablet{
                     align-self: center;
