--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -21,7 +21,7 @@
     --border: 1px solid var(--color-accent-alt);
 
     // тени
-    --shadow: 15px 10px 50% var(--color-shadow);
+    --shadow: 1px 1px 25px var(--color-shadow);
 
     // шрифты
     --font-main: 'Inter', sans-serif;
