--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,4 +19,6 @@
     './blocks/hero',
     './blocks/content',
     './blocks/plans',
-    './blocks/pagination';
+    './blocks/pagination',
+    './blocks/sponsors',
+    './blocks/testimonials';
