--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,4 +21,6 @@
     './blocks/plans',
     './blocks/pagination',
     './blocks/sponsors',
-    './blocks/testimonials';
+    './blocks/testimonials',
+    './blocks/freeTrial',
+    './blocks/footer';
